2014-03-11  Jean-Louis Martineau <martineau@zmanda.com>
	* amar-src/amar.h: Fix constant.
	* amar-src/amarchiver.c: Do not append attribute id (16) to filename
	  on extraction.
	* installcheck/Amanda_Archive.pl: Add check.
	* installcheck/amarchiver.pl: Add check.
	* perl/Amanda/Archive.swg: Document and export attribute id.

2014-03-05  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/diskflat-device.c: Check lseek result.

2014-03-05  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Util.swg (setup_application): Call glib_init.

2014-03-04  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/diskfile.h (struct disk_s): Add orig_holdingdisk.
	* server-src/diskfile.c: Set orig_holdingdisk.
	* server-src/driver.c: Use orig_holdingdisk to report error.
	* server-src/planner.c: Improve message.

2014-03-03  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/Makefile.am: Add diskflat-device.c and diskflat-device.h
	* device-src/device.c: Call diskflat_device_register
	* device-src/diskflat-device.c: New diskflat device.
	* device-src/diskflat-device.h: New diskflat device header file.
	* device-src/vfs-device.c: Refactoring.
	* device-src/vfs-device.h: Refactoring.
	* installcheck/Amanda_Device.pl: Check the diskflat device.
	* man/xml-source/amanda-devices.7.xml: Document the diskflat device.

2014-02-28  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/ndmp-device.c, device-src/s3-device.c,
	  device-src/tape-device.c, device-src/xfer-dest-device.c,
	  device-src/xfer-source-device.c, device-src/xfer-source-recovery.c,
	  xfer-src/element-glue.c,
	  xfer-src/filter-crc.c: Correctly report memory allocation error for
	  large buffer.

2014-02-28  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Taper/Protocol.pm: Add READY Message.
	* perl/Amanda/Taper/Scribe.pm: Call
	  $self->{'feedback'}->scribe_ready();
	* perl/Amanda/Taper/Worker.pm (scribe_ready): New method to send the
	  READY message.